; ModuleID = '/home/carl/AnghaBench/vlc/modules/codec/extr_cea708.c_CEA708AlphaConvert.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/codec/extr_cea708.c_CEA708AlphaConvert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CEA708_OPACITY_TRANSLUCENT = common dso_local global i64 0, align 8
@STYLE_ALPHA_OPAQUE = common dso_local global i32 0, align 4
@CEA708_OPACITY_TRANSPARENT = common dso_local global i64 0, align 8
@STYLE_ALPHA_TRANSPARENT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @CEA708AlphaConvert to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @CEA708AlphaConvert(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = load i64, i64* @CEA708_OPACITY_TRANSLUCENT, align 8
  %6 = icmp eq i64 %4, %5
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = load i32, i32* @STYLE_ALPHA_OPAQUE, align 4
  %9 = sdiv i32 %8, 2
  %10 = sext i32 %9 to i64
  store i64 %10, i64* %2, align 8
  br label %20

11:                                               ; preds = %1
  %12 = load i64, i64* %3, align 8
  %13 = load i64, i64* @CEA708_OPACITY_TRANSPARENT, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %17

15:                                               ; preds = %11
  %16 = load i64, i64* @STYLE_ALPHA_TRANSPARENT, align 8
  store i64 %16, i64* %2, align 8
  br label %20

17:                                               ; preds = %11
  %18 = load i32, i32* @STYLE_ALPHA_OPAQUE, align 4
  %19 = sext i32 %18 to i64
  store i64 %19, i64* %2, align 8
  br label %20

20:                                               ; preds = %17, %15, %7
  %21 = load i64, i64* %2, align 8
  ret i64 %21
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
